add proxy because I'm in China

--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -20,6 +20,8 @@ removePathAccents: true
 ############################
 
 module:
+  proxy: https://goproxy.cn
+
   imports:
     - path: github.com/wowchemy/wowchemy-hugo-themes/modules/wowchemy-plugin-netlify-cms
     - path: github.com/wowchemy/wowchemy-hugo-themes/modules/wowchemy-plugin-netlify
